Fixed text sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,13 @@ img:responsive {
 }
 
 /* Text settings for name header on mobile*/
-.MyNameHeaderMobile {
+.MyNameHeaderSmallScreens {
     font-size: 8vw;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     color: white;
 }
-.TitleHeaderMobile {
+.TitleHeaderSmallScreens {
     font-size: 4vw;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
